# utc-bot

./: Cargo.toml  Dockerfile  Readme.md
src/: main.rs
