[package]
name = "utc-bot"
version = "0.1.0"
edition = "2018"

[dependencies]
serenity = { version = "0.10.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
reqwest = { version = "0.11.6", features = ["json"] }
chrono = "0.4"